Signup checkbox fix and spacing on buy (joindrop)

--- a/src/Global-Components/Checkbox/style.module.scss
+++ b/src/Global-Components/Checkbox/style.module.scss
@@ -11,6 +11,7 @@ $desktop: 1200px;
         justify-content: left;
         padding-top: 20px;
         gap: 10px;
+        align-items: center;
         input {
             border-radius: 3px;
             width: 10px;
@@ -31,6 +32,7 @@ $desktop: 1200px;
         justify-content: left;
         padding-top: 20px;
         gap: 10px;
+        align-items: center;
         input {
             border-radius: 3px;
             width: 15px;
@@ -51,6 +53,8 @@ $desktop: 1200px;
         justify-content: left;
         padding-top: 20px;
         gap: 10px;
+        align-items: center;
+
         input {
             border-radius: 3px;
             width: 15px;
@@ -71,6 +75,8 @@ $desktop: 1200px;
         justify-content: left;
         padding-top: 20px;
         gap: 10px;
+        align-items: center;
+
         input {
             border-radius: 3px;
             width: 15px;
@@ -91,6 +97,8 @@ $desktop: 1200px;
         justify-content: left;
         padding-top: 20px;
         gap: 10px;
+        align-items: center;
+
         input {
             border-radius: 3px;
             width: 15px;
